<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="yields.client.activities.GroupActivity">



    <item android:id="@+id/actionEntourage"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/entourage"
        android:layout_gravity="center"
        app:showAsAction="always"
    />

    <item android:id="@+id/actionDiscover"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/discover"
        android:layout_gravity="center"
        app:showAsAction="always"
        />

    <item android:id="@+id/actionCreate"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/createGroup"
        android:layout_gravity="center"
        app:showAsAction="always"
        />

    <item android:id="@+id/actionSettings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        android:layout_gravity="center"
        app:showAsAction="always"
        />
</menu>