<resources>
    <string name="app_name">Yields</string>
    <string name="title_activity_message">MessageActivity</string>

    <string name="inputMessageFieldHintString">Enter your message</string>
    <string name="sendButtonString">Send</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_select_username">Select username</string>
    <string name="textViewUserNameSelection">Select your username for Yields !</string>
    <string name="editTextUsernameHint">Username</string>
    <string name="buttonCreateAccount">Create Account !</string>
    <string name="googleConnectionError">Could not connect to google services</string>
    <string name="appName">Yields</string>
    <string name="cancelText">Cancel</string>
    <string name="googleConnectingText">Connecting to Google services</string>
    <string name="textViewCreatingAccount">Creating account on Yields...</string>
    <string name="textViewLoggingIn">Logging in ...</string>
    <string name="messageUsernameTooShort">Username too short</string>
    <string name="messageUsernameContainsSpaces">Username can\'t contain spaces</string>

    <string name="entourage">Entourage</string>
    <string name="createGroup">Create group</string>
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="title_activity_create_group">Create new group</string>
    <string name="addNewContact">Add new Contact</string>
    <string name="addNewNode">Add new Node</string>
    <string name="addContactToGroup">Add contact</string>
    <string name="addNodeToGroup">Add node</string>
    <string name="title_activity_create_group_select_users">CreateGroupSelectUsersActivity</string>
    <string name="done">Done</string>
    <string name="enterGroupName">Enter your group\'s name</string>
    <string name="next">Next</string>
    <string name="groupType">Group type : </string>
    <string name="publicGroup">Publisher</string>
    <string name="privateGroup">Private group</string>
    <string name="messageGroupNameTooShort">Group name too short</string>
    <string name="backToGroupActivity">Back to group list</string>
    <string name="unknownGroup">Unknown group</string>
    <string name="groupSettings">Edit group</string>
    <string name="changeGroupName">Change group name</string>
    <string name="changeGroupType">Change group type</string>
    <string name="changeGroupImage">Change group image</string>
    <string name="addUsers">Add users</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="searchHint">Search for a name or a tag !</string>
    <string name="startSearchInfo">Start typing to search for nodes !</string>
    <string name="noGroupFound">No node found ...</string>
    <string name="groupImage">Group image</string>
    <string name="users">Users</string>
    <string name="subscribeGroup">Subscribe to group</string>
    <string name="noTags">No tags for this group</string>
    <string name="userImage">User image</string>
    <string name="addTag">Add tag</string>
    <string name="unsubscribeGroup">Unsubscribe from group</string>
    <string name="title_activity_image_show_pop_up">ImageShowPopUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="connectIcon">Connect Icon</string>
    <string name="noConnectionText">No connection</string>
    <string name="saveImageToGalleryDialog">Save image to Gallery ?</string>
    <string name="saveImageAcceptButton">Save</string>
    <string name="saveImageDeclineButton">Cancel</string>
    <string name="addGroup">Add group</string>
    <string name="changeUserName">Change username</string>
    <string name="changeUserImage">Change your picture</string>
    <string name="logout">Logout</string>
    <string name="addNode">Add node</string>
    <string name="rss">RSS feed</string>
    <string name="enterUrl">Enter the feed\'s url</string>
    <string name="messageUrlHttp">The url must start with http:// or https://</string>
    <string name="messageRssCreated">RSS feed created !</string>
    <string name="typeUrl">Type the URL of the RSS feed !</string>
    <string name="typeEmailEntourage">Type the email of the person to add him !</string>
    <string name="enterEmail">name@domain.com</string>
    <string name="messageWrongEmail">The email is malformed</string>
    <string name="messageContactAdded">User added to your entourage !</string>
    <string name="messageNoUser">No user exists with this email</string>
    <string name="leaveGroup">Leave group</string>
    <string name="enterKeyword">Leave empty to allow all feeds</string>
    <string name="typeKeywords">Then, type the keywords that the feed must contain to be published.</string>
    <string name="removeUsers">Select the contacts you want to remove from your entourage</string>
    <string name="removeFromEntourage">Remove contacts</string>
    <string name="messageNoGroup">Search for publishers, RSS feed, or create a new group to start using Yields !</string>
    <string name="nodes">Nodes</string>
    <string name="userInfo">See your info</string>
    <string name="messageGroupNameTooLong">The group name is too long</string>
    <string name="messageUsernameTooLong">The username is too long</string>
</resources>