<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="editText" type="id" />
    <item name="connectionStatus" type="id">connectionStatus</item>
</resources>